[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/sewer.gd" type="Script" id=1]
[ext_resource path="res://tilesets/interior_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://art/interiors/torch1.png" type="Texture" id=3]
[ext_resource path="res://art/interiors/torch2.png" type="Texture" id=4]
[ext_resource path="res://art/interiors/torch3.png" type="Texture" id=5]
[ext_resource path="res://art/interiors/sewer_door2.png" type="Texture" id=6]
[ext_resource path="res://art/interiors/sewer_door0.png" type="Texture" id=7]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=8]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "opening",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 7, 8 )

[node name="sewer" type="Node"]

script = ExtResource( 1 )

[node name="background" type="TileMap" parent="." index="0"]

scale = Vector2( 3, 3 )
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -65503, 79, 0, -65502, 79, 0, -65501, 79, 0, -65500, 79, 0, -65499, 79, 0, -65498, 79, 0, -65497, 79, 0, -65496, 79, 0, -65495, 79, 0, -65494, 79, 0, 65522, 79, 0, 65523, 79, 0, 65524, 79, 0, 65525, 79, 0, 65526, 79, 0, 65527, 79, 0, 65528, 79, 0, 65529, 79, 0, 65530, 79, 0, 65531, 79, 0, 65532, 79, 0, 65533, 79, 0, 33, 79, 0, 34, 79, 0, 35, 82, 0, 36, 82, 0, 37, 82, 0, 38, 82, 0, 39, 82, 0, 40, 82, 0, 41, 85, 0, 42, 79, 0, 131058, 79, 0, 131059, 84, 0, 131060, 82, 0, 131061, 82, 0, 131062, 82, 0, 131063, 82, 0, 131064, 82, 0, 131065, 82, 0, 131066, 82, 0, 131067, 82, 0, 131068, 85, 0, 131069, 79, 0, 65544, 79, 0, 65545, 79, 0, 65546, 79, 0, 65547, 79, 0, 65548, 79, 0, 65549, 79, 0, 65550, 79, 0, 65551, 79, 0, 65552, 79, 0, 65553, 79, 0, 65554, 79, 0, 65555, 79, 0, 65556, 79, 0, 65557, 79, 0, 65558, 79, 0, 65559, 79, 0, 65560, 79, 0, 65561, 79, 0, 65562, 79, 0, 65563, 79, 0, 65564, 79, 0, 65565, 79, 0, 65566, 79, 0, 65567, 79, 0, 65568, 79, 0, 65569, 79, 0, 65570, 80, 0, 65571, 110, 0, 65572, 110, 0, 65573, 110, 0, 65574, 110, 0, 65575, 110, 0, 65576, 110, 0, 65577, 78, 0, 65578, 79, 0, 196594, 79, 0, 196595, 80, 0, 196596, 110, 0, 196597, 110, 0, 196598, 110, 0, 196599, 110, 0, 196600, 110, 0, 196601, 110, 0, 196602, 110, 0, 196603, 110, 0, 196604, 78, 0, 196605, 79, 0, 131080, 79, 0, 131081, 84, 0, 131082, 82, 0, 131083, 82, 0, 131084, 82, 0, 131085, 82, 0, 131086, 82, 0, 131087, 82, 0, 131088, 82, 0, 131089, 82, 0, 131090, 82, 0, 131091, 82, 0, 131092, 82, 0, 131093, 82, 0, 131094, 82, 0, 131095, 82, 0, 131096, 82, 0, 131097, 82, 0, 131098, 82, 0, 131099, 82, 0, 131100, 82, 0, 131101, 82, 0, 131102, 82, 0, 131103, 82, 0, 131104, 82, 0, 131105, 82, 0, 131106, 83, 0, 131107, 111, 0, 131108, 111, 0, 131109, 111, 0, 131110, 111, 0, 131112, 111, 0, 131113, 78, 0, 131114, 79, 0, 262130, 79, 0, 262131, 80, 0, 262132, 111, 0, 262134, 111, 0, 262135, 111, 0, 262136, 111, 0, 262137, 111, 0, 262138, 111, 0, 262139, 111, 0, 262140, 78, 0, 262141, 79, 0, 196616, 79, 0, 196617, 80, 0, 196618, 110, 0, 196619, 110, 0, 196620, 110, 0, 196621, 110, 0, 196622, 110, 0, 196623, 110, 0, 196624, 110, 0, 196625, 110, 0, 196626, 110, 0, 196627, 110, 0, 196628, 110, 0, 196629, 110, 0, 196630, 110, 0, 196631, 110, 0, 196632, 110, 0, 196633, 110, 0, 196634, 110, 0, 196635, 110, 0, 196636, 110, 0, 196637, 110, 0, 196638, 110, 0, 196639, 110, 0, 196640, 110, 0, 196641, 110, 0, 196642, 110, 0, 196643, 88, 0, 196644, 89, 0, 196645, 89, 0, 196646, 89, 0, 196647, 89, 0, 196648, 90, 0, 196649, 78, 0, 196650, 79, 0, 327666, 79, 0, 327667, 80, 0, 327668, 88, 0, 327669, 89, 0, 327670, 89, 0, 327671, 89, 0, 327672, 89, 0, 327673, 89, 0, 327674, 89, 0, 327675, 90, 0, 327676, 78, 0, 327677, 79, 0, 262152, 79, 0, 262153, 80, 0, 262154, 111, 0, 262155, 111, 0, 262156, 111, 0, 262157, 111, 0, 262158, 111, 0, 262159, 111, 0, 262160, 111, 0, 262161, 111, 0, 262162, 111, 0, 262163, 111, 0, 262164, 111, 0, 262165, 111, 0, 262166, 111, 0, 262167, 111, 0, 262168, 111, 0, 262169, 111, 0, 262170, 111, 0, 262171, 111, 0, 262172, 111, 0, 262173, 111, 0, 262174, 111, 0, 262175, 111, 0, 262176, 111, 0, 262177, 111, 0, 262178, 111, 0, 262179, 91, 0, 262180, 92, 0, 262181, 92, 0, 262182, 92, 0, 262183, 92, 0, 262184, 93, 0, 262185, 78, 0, 262186, 79, 0, 393202, 79, 0, 393203, 80, 0, 393204, 91, 0, 393205, 92, 0, 393206, 92, 0, 393207, 92, 0, 393208, 92, 0, 393209, 92, 0, 393210, 92, 0, 393211, 93, 0, 393212, 78, 0, 393213, 79, 0, 327688, 79, 0, 327689, 80, 0, 327690, 88, 0, 327691, 89, 0, 327692, 105, 0, 327693, 105, 0, 327694, 105, 0, 327695, 105, 0, 327696, 105, 0, 327697, 105, 0, 327698, 105, 0, 327699, 105, 0, 327700, 105, 0, 327701, 105, 0, 327702, 105, 0, 327703, 105, 0, 327704, 105, 0, 327705, 105, 0, 327706, 105, 0, 327707, 105, 0, 327708, 105, 0, 327709, 105, 0, 327710, 105, 0, 327711, 105, 0, 327712, 105, 0, 327713, 105, 0, 327714, 105, 0, 327715, 106, 0, 327716, 92, 0, 327717, 92, 0, 327718, 92, 0, 327719, 92, 0, 327720, 93, 0, 327721, 78, 0, 327722, 79, 0, 458738, 79, 0, 458739, 80, 0, 458740, 91, 0, 458741, 92, 0, 458742, 92, 0, 458743, 92, 0, 458744, 92, 0, 458745, 92, 0, 458746, 92, 0, 458747, 93, 0, 458748, 78, 0, 458749, 79, 0, 393224, 79, 0, 393225, 80, 0, 393226, 91, 0, 393227, 93, 0, 393228, 75, 0, 393229, 76, 0, 393230, 76, 0, 393231, 76, 0, 393232, 76, 0, 393233, 76, 0, 393234, 76, 0, 393235, 76, 0, 393236, 76, 0, 393237, 76, 0, 393238, 76, 0, 393239, 76, 0, 393240, 76, 0, 393241, 76, 0, 393242, 76, 0, 393243, 76, 0, 393244, 76, 0, 393245, 76, 0, 393246, 76, 0, 393247, 76, 0, 393248, 76, 0, 393249, 76, 0, 393250, 77, 0, 393251, 91, 0, 393252, 92, 0, 393253, 92, 0, 393254, 92, 0, 393255, 92, 0, 393256, 93, 0, 393257, 78, 0, 393258, 79, 0, 524274, 79, 0, 524275, 80, 0, 524276, 91, 0, 524277, 92, 0, 524278, 92, 0, 524279, 92, 0, 524280, 92, 0, 524281, 92, 0, 524282, 92, 0, 524283, 93, 0, 524284, 78, 0, 524285, 79, 0, 458760, 79, 0, 458761, 80, 0, 458762, 91, 0, 458763, 93, 0, 458764, 78, 0, 458765, 79, 0, 458766, 79, 0, 458767, 79, 0, 458768, 79, 0, 458769, 79, 0, 458770, 79, 0, 458771, 79, 0, 458772, 79, 0, 458773, 79, 0, 458774, 79, 0, 458775, 79, 0, 458776, 79, 0, 458777, 79, 0, 458778, 79, 0, 458779, 79, 0, 458780, 79, 0, 458781, 79, 0, 458782, 79, 0, 458783, 79, 0, 458784, 79, 0, 458785, 79, 0, 458786, 80, 0, 458787, 91, 0, 458788, 92, 0, 458789, 92, 0, 458790, 92, 0, 458791, 92, 0, 458792, 93, 0, 458793, 78, 0, 458794, 79, 0, 589810, 79, 0, 589811, 80, 0, 589812, 91, 0, 589813, 92, 0, 589814, 92, 0, 589815, 92, 0, 589816, 92, 0, 589817, 92, 0, 589818, 92, 0, 589819, 93, 0, 589820, 78, 0, 589821, 79, 0, 524296, 79, 0, 524297, 80, 0, 524298, 91, 0, 524299, 93, 0, 524300, 78, 0, 524301, 79, 0, 524321, 79, 0, 524322, 80, 0, 524323, 91, 0, 524324, 92, 0, 524325, 92, 0, 524326, 92, 0, 524327, 92, 0, 524328, 93, 0, 524329, 78, 0, 524330, 79, 0, 655346, 79, 0, 655347, 80, 0, 655348, 91, 0, 655349, 92, 0, 655350, 92, 0, 655351, 92, 0, 655352, 92, 0, 655353, 92, 0, 655354, 92, 0, 655355, 93, 0, 655356, 78, 0, 655357, 79, 0, 589832, 79, 0, 589833, 80, 0, 589834, 91, 0, 589835, 93, 0, 589836, 78, 0, 589837, 79, 0, 589857, 79, 0, 589858, 80, 0, 589859, 94, 0, 589860, 95, 0, 589861, 95, 0, 589862, 95, 0, 589863, 95, 0, 589864, 96, 0, 589865, 78, 0, 589866, 79, 0, 720882, 79, 0, 720883, 80, 0, 720884, 94, 0, 720885, 95, 0, 720886, 95, 0, 720887, 95, 0, 720888, 95, 0, 720889, 95, 0, 720890, 95, 0, 720891, 93, 0, 720892, 78, 0, 720893, 79, 0, 720894, 79, 0, 720895, 79, 0, 655360, 79, 0, 655361, 79, 0, 655362, 79, 0, 655363, 79, 0, 655364, 79, 0, 655365, 79, 0, 655366, 79, 0, 655367, 79, 0, 655368, 79, 0, 655369, 80, 0, 655370, 91, 0, 655371, 93, 0, 655372, 78, 0, 655373, 79, 0, 655393, 79, 0, 655394, 86, 0, 655395, 76, 0, 655396, 76, 0, 655397, 76, 0, 655398, 76, 0, 655399, 76, 0, 655400, 76, 0, 655401, 87, 0, 655402, 79, 0, 786418, 79, 0, 786419, 86, 0, 786420, 76, 0, 786421, 76, 0, 786422, 76, 0, 786423, 76, 0, 786424, 76, 0, 786425, 76, 0, 786426, 77, 0, 786427, 108, 0, 786428, 78, 0, 786429, 79, 0, 786430, 79, 0, 786431, 79, 0, 720896, 84, 0, 720897, 82, 0, 720898, 82, 0, 720899, 82, 0, 720900, 82, 0, 720901, 82, 0, 720902, 82, 0, 720903, 82, 0, 720904, 82, 0, 720905, 83, 0, 720906, 91, 0, 720907, 93, 0, 720908, 78, 0, 720909, 79, 0, 720929, 79, 0, 720930, 79, 0, 720931, 79, 0, 720932, 79, 0, 720933, 79, 0, 720934, 79, 0, 720935, 79, 0, 720936, 79, 0, 720937, 79, 0, 720938, 79, 0, 851954, 79, 0, 851955, 79, 0, 851956, 79, 0, 851957, 79, 0, 851958, 79, 0, 851959, 79, 0, 851960, 79, 0, 851961, 79, 0, 851962, 80, 0, 851963, 108, 0, 851964, 81, 0, 851965, 82, 0, 851966, 82, 0, 851967, 82, 0, 786432, 83, 0, 786433, 110, 0, 786434, 110, 0, 786435, 110, 0, 786436, 110, 0, 786437, 110, 0, 786438, 110, 0, 786439, 110, 0, 786440, 110, 0, 786441, 110, 0, 786442, 91, 0, 786443, 93, 0, 786444, 78, 0, 786445, 79, 0, 917497, 79, 0, 917498, 80, 0, 917499, 108, 0, 917500, 110, 0, 917501, 110, 0, 917502, 110, 0, 917503, 110, 0, 851968, 110, 0, 851969, 111, 0, 851970, 111, 0, 851972, 111, 0, 851973, 111, 0, 851974, 111, 0, 851975, 111, 0, 851976, 111, 0, 851977, 111, 0, 851978, 91, 0, 851979, 93, 0, 851980, 78, 0, 851981, 79, 0, 983033, 79, 0, 983034, 80, 0, 983035, 108, 0, 983036, 111, 0, 983037, 111, 0, 983038, 111, 0, 983039, 111, 0, 917504, 111, 0, 917505, 88, 0, 917506, 89, 0, 917507, 89, 0, 917508, 89, 0, 917509, 89, 0, 917510, 89, 0, 917511, 89, 0, 917512, 89, 0, 917513, 89, 0, 917514, 100, 0, 917515, 93, 0, 917516, 78, 0, 917517, 79, 0, 1048569, 79, 0, 1048570, 80, 0, 1048571, 94, 0, 1048572, 105, 0, 1048573, 105, 0, 1048574, 105, 0, 1048575, 105, 0, 983040, 105, 0, 983041, 95, 0, 983042, 95, 0, 983043, 95, 0, 983044, 95, 0, 983045, 95, 0, 983046, 95, 0, 983047, 95, 0, 983048, 95, 0, 983049, 95, 0, 983050, 95, 0, 983051, 96, 0, 983052, 78, 0, 983053, 79, 0, 1114105, 79, 0, 1114106, 86, 0, 1114107, 76, 0, 1114108, 76, 0, 1114109, 76, 0, 1114110, 76, 0, 1114111, 76, 0, 1048576, 76, 0, 1048577, 76, 0, 1048578, 76, 0, 1048579, 76, 0, 1048580, 76, 0, 1048581, 76, 0, 1048582, 76, 0, 1048583, 76, 0, 1048584, 76, 0, 1048585, 76, 0, 1048586, 76, 0, 1048587, 76, 0, 1048588, 87, 0, 1048589, 79, 0, 1179641, 79, 0, 1179642, 79, 0, 1179643, 79, 0, 1179644, 79, 0, 1179645, 79, 0, 1179646, 79, 0, 1179647, 79, 0, 1114112, 79, 0, 1114113, 79, 0, 1114114, 79, 0, 1114115, 79, 0, 1114116, 79, 0, 1114117, 79, 0, 1114118, 79, 0, 1114119, 79, 0, 1114120, 79, 0, 1114121, 79, 0, 1114122, 79, 0, 1114123, 79, 0, 1114124, 79, 0, 1114125, 79, 0 )
_sections_unfolded = [ "Transform" ]

[node name="foreground" type="TileMap" parent="." index="1"]

editor/display_folded = true
scale = Vector2( 3, 3 )
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 65575, 119, 0, 196597, 119, 0, 131111, 120, 0, 786435, 119, 0, 851971, 120, 0 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="torch0" type="AnimatedSprite" parent="foreground" index="0"]

position = Vector2( 112, 210.667 )
frames = SubResource( 1 )
animation = "default"
playing = true

[node name="torch1" type="AnimatedSprite" parent="foreground" index="1"]

position = Vector2( 202.667, 66.6667 )
frames = SubResource( 1 )
animation = "default"
frame = 2
playing = true

[node name="torch2" type="AnimatedSprite" parent="foreground" index="2"]

position = Vector2( 306.667, 66.6667 )
frames = SubResource( 1 )
animation = "default"
frame = 2
playing = true

[node name="torch3" type="AnimatedSprite" parent="foreground" index="3"]

position = Vector2( 405.333, 66.6667 )
frames = SubResource( 1 )
animation = "default"
frame = 1
playing = true

[node name="torch4" type="AnimatedSprite" parent="foreground" index="4"]

position = Vector2( 514.667, 66.6667 )
frames = SubResource( 1 )
animation = "default"
frame = 1
playing = true

[node name="torch5" type="AnimatedSprite" parent="foreground" index="5"]

position = Vector2( 600, 34.6667 )
frames = SubResource( 1 )
animation = "default"
playing = true

[node name="torch6" type="AnimatedSprite" parent="foreground" index="6"]

position = Vector2( -120, 50.6667 )
frames = SubResource( 1 )
animation = "default"
playing = true

[node name="torch7" type="AnimatedSprite" parent="foreground" index="7"]

position = Vector2( -24, 226.667 )
frames = SubResource( 1 )
animation = "default"
frame = 2
playing = true

[node name="camera" type="Camera2D" parent="." index="2"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Smoothing" ]
__meta__ = {
"_edit_group_": true
}

[node name="camera_tween" type="Tween" parent="camera" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="door0" type="Area2D" parent="." index="3"]

position = Vector2( 168, 656 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="door0" index="0"]

scale = Vector2( 2, 2 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="door1" type="Area2D" parent="." index="4"]

position = Vector2( 1896, 128 )
scale = Vector2( 2, 2 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="door1" index="0"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="locked_door0" type="Area2D" parent="." index="5"]

position = Vector2( -504, 168 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="animation" type="AnimatedSprite" parent="locked_door0" index="0"]

scale = Vector2( 3, 3 )
frames = SubResource( 3 )
animation = "opening"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="locked_door0" index="1"]

position = Vector2( 0, 8 )
scale = Vector2( 2, 2 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="player" parent="." index="6" instance=ExtResource( 8 )]

position = Vector2( 504, 296 )

[connection signal="area_entered" from="door0" to="." method="_on_door0_area_entered"]

[connection signal="area_entered" from="door1" to="." method="_on_door1_area_entered"]

[connection signal="area_entered" from="locked_door0" to="." method="_on_locked_door0_area_entered"]


